# axonal_connectomics

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  example_runmodules.py  newtestmodules.py  pull_request_template.md  pyproject.toml  requirements.txt  runmodules.py  setup.cfg  setup.py  test_requirements.txt  testconvert.py  testmodules.py  tiff_to_n5.py
.github/workflows/: ci.yml  submodule-update.yml
acpreprocessing/: __init__.py  deskewing.py  downsample_tiffs_and_extract_metadata.py  downsampling.py  header_parse.py  p2ng.py  processoverview.py  run_nglink_steps.py
acpreprocessing/flatten/: cr_utils_v2.py  flatten_utils.py  flatten_volume.py  kt_utils_v4.py  run_flatten_volume.ipynb
acpreprocessing/imagej/: imagej.py
acpreprocessing/neuroglancer/: segmentation.py
acpreprocessing/scripts/: copy_mip1.py
acpreprocessing/surface_detection/: surface_detection.py
acpreprocessing/utils/: 8bit.py  ac_imageio.py  convert.py  crop_tif.py  io.py  logging.py  make_tinyurl.py  psdeskew.py  split_channels.py
dbutils/: dbutils.py
examples/: example_dag.py  nglink_from_tiff.ipynb  runme_deskew.py  runme_downsample_gifs.py  runme_downsample_tifs.py  runmodules.py  runprocessing.py  save_gif_bdv.py  testsharmiexample.py
examples/configs/: config_downsample_gifs_487748_36_NeuN_NFH488_25X_1XPBS.json  config_downsample_tifs_487748_36_NeuN_NFH488_25X_1XPBS.json  example_deskew.json  example_ds_gif.json  example_ds_tiff.json  test36.json  testconfig.json
examples/makeconfigs/: make_config_downsample_gifs_36.py
flattening/: README.md  runcurvedstack_0427.ipynb
flattening/imagej_macros/: clahe_macro.ijm
scripts/: make_config_downsample_gifs.py  make_config_downsample_gifs_36.py  make_config_downsample_tiffs_36.py  runme.py  runme_downsample_gifs.py  runme_downsample_tifs.py
scripts/configs/: config_downsample_tiff.json  (+3 more)
test/: conftest.py  test_crop.py  test_deskew.py  test_downsample.py  test_images.py  test_stitching_modules.py  voltest.py
tutorials/: Neuroglancer links.ipynb
(+43 files in other folders)
