[project]
name = "acpreprocessing"
requires-python = ">3.8,<3.12"
dynamic = ["version"] 
dependencies = [
    "pillow",
    "tifffile==2020.7.4",
    "scikit-image",
    "numpy",
    "imageio",
    # "imageio<2.21",
    "matplotlib",
    "argschema",
    "natsort",
    "requests",
    "cloud-volume>=8.5.5",
    "zarr",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "codecov",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "acpreprocessing",
]

[tool.setuptools_scm]
version_file = "acpreprocessing/_version.py"

# some downgrades from pixi's expectations
[tool.pixi.system-requirements]
linux = "5.0.0"
libc = "2.27"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
acpreprocessing = { path = ".", editable = true }

# conda-enabled features
[tool.pixi.feature.pixi-base.dependencies]
numpy = "*"
imageio = "*"
matplotlib = "*"

# version-specific python features
[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"


[tool.pixi.feature.conda-lab.dependencies]
jupyterlab = "*"

[tool.pixi.feature.scalene.dependencies]
scalene = "*"

[tool.pixi.environments]
py310 = ["py310"]
py310-test = ["py310", "test"]
py311 = ["py311"]
py311-test = ["py311", "test"]
py310-conda = ["py310", "pixi-base"]
py310-conda-test = ["py310", "pixi-base", "test"]
py311-conda = ["py311", "pixi-base"]
py311-conda-test = ["py311", "pixi-base", "test"]
py311-conda-lab = ["py311", "pixi-base", "conda-lab"]
py311-conda-scalene = ["py311", "pixi-base", "scalene"]
py311-conda-scalene-lab = ["py311", "pixi-base", "scalene", "conda-lab"]

[tool.coverage.run]
omit = ["test/*",]

[tool.pixi.feature.test.tasks]
test = "pytest  --cov --cov-report=xml --junitxml=test-reports/test.xml"
